# pirate-spaces-signer

./: .gitignore  README.md  package.json
native/: Cargo.toml
native/src/: main.rs
scripts/: sign-digest.ts
src/: json-rpc.ts  labels.ts  native.ts
